--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   fps.ms - Free Discord Bot Hosting
+   LIKHON HOST - FREE HOST YOUR BOT
   </title>
   <meta content="Host your discord bot for free - forever with fps.ms. 25% CPU, 128 MB RAM, 250 MB storage. No credit card required, deploy instantly." name="description"/>
   <meta content="free discord bot hosting, discord bot host free, free discord bot server, discord bot hosting free, free bot hosting discord" name="keywords"/>
